Fix gaps in payouts weekly/monthly table views with explicit column widths

--- a/Payouts/payouts-style.css
+++ b/Payouts/payouts-style.css
@@ -281,34 +281,126 @@
 
 #weeklyWrap th:nth-child(1),
 #weeklyWrap td:nth-child(1) {
-  width: 25%;
+  width: 28%;
   text-align: left;
   padding-left: 16px;
 }
 
 #weeklyWrap th:nth-child(2),
 #weeklyWrap td:nth-child(2) {
-  width: 18%;
+  width: 16%;
   text-align: center;
 }
 
 #weeklyWrap th:nth-child(3),
 #weeklyWrap td:nth-child(3) {
-  width: 17%;
+  width: 22%;
   text-align: center;
 }
 
 #weeklyWrap th:nth-child(4),
 #weeklyWrap td:nth-child(4) {
-  width: 25%;
+  width: 22%;
   text-align: right;
   padding-right: 16px;
 }
 
 #weeklyWrap th:nth-child(5),
 #weeklyWrap td:nth-child(5) {
-  width: 15%;
+  width: 12%;
   text-align: center;
+  padding-right: 16px;
+}
+
+/* ===== Table Column Widths (Monthly View) ===== */
+#monthlyWrap table {
+  width: 100%;
+}
+
+#monthlyWrap th:nth-child(1),
+#monthlyWrap td:nth-child(1) {
+  width: 20%;
+  text-align: left;
+  padding-left: 16px;
+}
+
+#monthlyWrap th:nth-child(2),
+#monthlyWrap td:nth-child(2) {
+  width: 25%;
+  text-align: center;
+}
+
+#monthlyWrap th:nth-child(3),
+#monthlyWrap td:nth-child(3) {
+  width: 22%;
+  text-align: center;
+}
+
+#monthlyWrap th:nth-child(4),
+#monthlyWrap td:nth-child(4) {
+  width: 33%;
+  text-align: right;
+  padding-right: 16px;
+}
+
+/* ===== Table Column Widths (Jobs View) ===== */
+#jobsWrap table {
+  width: 100%;
+}
+
+#jobsWrap th:nth-child(1),
+#jobsWrap td:nth-child(1) {
+  width: 12%;
+  text-align: left;
+  padding-left: 16px;
+}
+
+#jobsWrap th:nth-child(2),
+#jobsWrap td:nth-child(2) {
+  width: 12%;
+  text-align: left;
+}
+
+#jobsWrap th:nth-child(3),
+#jobsWrap td:nth-child(3) {
+  width: 12%;
+  text-align: left;
+}
+
+#jobsWrap th:nth-child(4),
+#jobsWrap td:nth-child(4) {
+  width: 9%;
+  text-align: center;
+}
+
+#jobsWrap th:nth-child(5),
+#jobsWrap td:nth-child(5) {
+  width: 10%;
+  text-align: center;
+}
+
+#jobsWrap th:nth-child(6),
+#jobsWrap td:nth-child(6) {
+  width: 14%;
+  text-align: center;
+}
+
+#jobsWrap th:nth-child(7),
+#jobsWrap td:nth-child(7) {
+  width: 11%;
+  text-align: center;
+}
+
+#jobsWrap th:nth-child(8),
+#jobsWrap td:nth-child(8) {
+  width: 11%;
+  text-align: center;
+}
+
+#jobsWrap th:nth-child(9),
+#jobsWrap td:nth-child(9) {
+  width: 9%;
+  text-align: right;
   padding-right: 16px;
 }
 
